[gd_scene load_steps=8 format=3 uid="uid://grt31vvx70ew"]

[ext_resource type="Texture2D" uid="uid://i43o2cidwra0" path="res://sprites/ui/moves/move_back_plate.png" id="1_s4gs6"]
[ext_resource type="Script" uid="uid://3w8kjpx8wwhk" path="res://scripts/object/moves_plate.gd" id="1_v75ur"]
[ext_resource type="Texture2D" uid="uid://dvkvqdeee68a0" path="res://sprites/ui/moves/numbers/move_overflow.png" id="2_v75ur"]
[ext_resource type="Texture2D" uid="uid://by3x43h4kfxhl" path="res://sprites/ui/moves/move_plate.png" id="3_5gre1"]

[sub_resource type="Animation" id="Animation_v75ur"]
resource_name = "out_of_moves"
step = 0.083333336

[sub_resource type="Animation" id="Animation_5gre1"]
resource_name = "drop_move"
step = 0.083333336

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yqw4o"]
_data = {
&"drop_move": SubResource("Animation_5gre1"),
&"out_of_moves": SubResource("Animation_v75ur")
}

[node name="moves_plate" type="Node2D"]
script = ExtResource("1_v75ur")

[node name="plate_back" type="Sprite2D" parent="."]
position = Vector2(128, 128)
texture = ExtResource("1_s4gs6")

[node name="plate_number" type="Sprite2D" parent="."]
position = Vector2(128, 128)
texture = ExtResource("2_v75ur")

[node name="plate_front" type="Sprite2D" parent="."]
position = Vector2(128, 128)
texture = ExtResource("3_5gre1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yqw4o")
}
